digit recognizition changes

--- a/digit recognition/digit_recognition.ipynb
+++ b/digit recognition/digit_recognition.ipynb
@@ -29,8 +29,8 @@
     }
    ],
    "source": [
-    "train_data = pd.read_csv('./data/train.csv')\n",
-    "test_data = pd.read_csv('./data/test.csv')\n",
+    "train_data = pd.read_csv('./data/train.csv') # Deleted from folder\n",
+    "test_data = pd.read_csv('./data/test.csv') # Deleted from folder\n",
     "train_data.head()\n",
     "train_data.isnull().sum()[train_data.isnull().sum() >0]\n"
    ]
